# lightshuttle

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  clippy.toml  cog.toml  deny.toml  lefthook.yml  release.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  bump.yml  ci.yml  docs.yml  release.yml
.work/: pr21-body.md
crates/lightshuttle/: Cargo.toml  README.md
crates/lightshuttle-control/: Cargo.toml
crates/lightshuttle-control/assets/: style.css
crates/lightshuttle-control/src/: error.rs  lib.rs  metrics.rs  server.rs  state.rs
crates/lightshuttle-control/src/routes/: assets.rs  dashboard.rs  events_ws.rs  healthz.rs  logs_ws.rs  metrics.rs  mod.rs  resources.rs
crates/lightshuttle-control/templates/: _status_table.html  index.html  layout.html  resource.html
crates/lightshuttle-control/tests/: api_resources.rs  dashboard.rs  metrics_endpoint.rs  ws_logs.rs
crates/lightshuttle-export/: Cargo.toml
crates/lightshuttle-export/src/: emit.rs  error.rs  lib.rs  lower.rs  model.rs  resolve.rs
crates/lightshuttle-export/src/emitters/: compose.rs  helm.rs  kubernetes.rs  mod.rs
crates/lightshuttle-export/tests/: compose_emitter.rs  dns_name_collisions.rs  drive_qualified_volumes.rs  duration_agreement.rs  export_core.rs  helm_emitter.rs  helm_image_reference.rs  kubernetes_emitter.rs  probe_bounds.rs  volume_parity.rs
crates/lightshuttle-export/tests/common/: mod.rs
crates/lightshuttle-export/tests/golden/: docker-compose.yml
crates/lightshuttle-export/tests/golden/helm/: Chart.yaml  cache.yaml  db.yaml  values.yaml  worker.yaml
crates/lightshuttle-export/tests/golden/k8s/: cache.yaml  db.yaml  worker.yaml
crates/lightshuttle-manifest/: Cargo.toml  README.md
crates/lightshuttle-manifest/src/: error.rs  host_paths.rs  interpolate.rs  lib.rs  parse.rs  schema.rs  validate.rs
crates/lightshuttle-manifest/src/canonical/: credential.rs  dns_name.rs  duration.rs  image_reference.rs  mod.rs  volume_mapping.rs
crates/lightshuttle-manifest/src/model/: command.rs  container.rs  dashboard.rs  dockerfile.rs  export.rs  healthcheck.rs  manifest.rs  mod.rs  observability.rs  port.rs  postgres.rs  redis.rs  resource.rs  volume.rs
crates/lightshuttle-manifest/tests/: canonical_credential.rs  canonical_dns_name.rs  canonical_duration.rs  canonical_image_reference.rs  canonical_volume_mapping.rs  export_section.rs  interpolation.rs  round_trip.rs  schema_fixtures.rs  validation.rs
crates/lightshuttle-manifest/tests/fixtures/: hello-world.yml  real-world.yml
crates/lightshuttle-manifest/tests/fixtures/invalid/: cycle.yml
crates/lightshuttle-otel/: Cargo.toml
crates/lightshuttle-otel/src/: augment.rs  config.rs  env.rs  lib.rs  tracer.rs
crates/lightshuttle-runtime/: Cargo.toml  README.md
crates/lightshuttle-runtime/src/: docker.rs  error.rs  lib.rs  runtime.rs  spec.rs  testkit.rs
crates/lightshuttle-runtime/src/lifecycle/: env_report.rs  error.rs  handle.rs  manager.rs  mod.rs  plan.rs  status.rs  view.rs
crates/lightshuttle-runtime/tests/: harness.rs  integration_docker.rs  lifecycle_integration.rs  lifecycle_manager_mock.rs  lifecycle_plan.rs  lifecycle_scenarios.rs  manager_handle.rs  networking.rs  recreate.rs  restart_concurrency.rs  restart_one.rs  secrets_scenarios.rs  spec_from_resource.rs
crates/lightshuttle-runtime/tests/common/: mod.rs
crates/lightshuttle-secrets/: Cargo.toml
crates/lightshuttle-secrets/src/: error.rs  lib.rs
crates/lightshuttle-secrets/src/source/: env_file.rs  mod.rs
crates/lightshuttle-spec/: Cargo.toml
crates/lightshuttle-spec/src/: error.rs  lib.rs  spec.rs
crates/lightshuttle-spec/tests/: resource_url_credentials.rs
crates/lightshuttle/src/: cli.rs  control_url.rs  discovery.rs  lib.rs  main.rs  output.rs
crates/lightshuttle/src/commands/: down.rs  export.rs  logs.rs  manifest.rs  mod.rs  ps.rs  restart.rs  secrets.rs  up.rs  validate.rs
crates/lightshuttle/src/commands/alias/: apply.rs  mod.rs  plan.rs  shell.rs
crates/lightshuttle/tests/: alias.rs  cli.rs  cli_offline.rs  cli_smoke.rs  export.rs  secrets.rs
docs/: GOVERNANCE.md  MSRV_POLICY.md  README.md  RELEASE_PROCESS.md  SEMVER_POLICY.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/explanation/: architecture.md  index.md  lifecycle.md  networking.md
docs/book/src/how-to/: dependencies-and-health.md  entrypoint-and-command.md  index.md  networking-and-discovery.md  observability.md  secrets-and-env.md  troubleshooting.md
docs/book/src/reference/: index.md
docs/book/src/reference/cli/: alias.md  down.md  export.md  index.md  logs.md  manifest.md  ps.md  restart.md  secrets.md  up.md  validate.md
docs/book/src/reference/manifest/: common-types.md  container.md  dashboard.md  dockerfile.md  export.md  index.md  observability.md  postgres.md  project.md  redis.md
docs/book/src/tutorials/: export.md  getting-started.md
docs/book/src/tutorials/onboarding/: go.md  index.md  rust.md  (+2 more)
docs/explanation/: roadmap.md
docs/spec/: control-api.md  export.md  manifest-v0.md  manifest-v0.schema.json  observability.md
docs/tutorial/: dashboard.md  export.md  getting-started.md
examples/: README.md
examples/01-hello-world/: README.md  lightshuttle.yml
examples/02-postgres-and-api/: README.md  lightshuttle.yml
examples/03-full-stack/: .gitignore  README.md  lightshuttle.yml
examples/03-full-stack/apps/api/: Dockerfile
examples/04-export/: .gitignore  README.md  lightshuttle.yml
examples/05-secrets/: .env.example  .gitignore  README.md  lightshuttle.yml
examples/06-dashboard-observability/: README.md  lightshuttle.yml
scripts/: cargo-publish-idempotent.sh  release.sh
xtask/: Cargo.toml
xtask/src/: doc_gen.rs  main.rs
xtask/src/bench/: cold_start.rs  mod.rs
xtask/src/doc_gen/: cli.rs  manifest.rs  mod.rs
