[workspace]
resolver = "3"
members = [
    "crates/lightshuttle",
    "crates/lightshuttle-manifest",
    "crates/lightshuttle-runtime",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nubster-opensources/lightshuttle"
homepage = "https://github.com/nubster-opensources/lightshuttle"
authors = ["Encelade Technologies"]
keywords = ["orchestrator", "dev-tools", "docker", "polyglot"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
schemars = { version = "0.8", features = ["indexmap2"] }
thiserror = "2"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
jsonschema = { version = "0.17", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tar = "0.4"
ignore = "0.4"
bytes = "1"
humantime = "2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
