[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
lightshuttle-manifest = { version = "0.1.0", path = "../crates/lightshuttle-manifest" }
serde_json.workspace = true
