[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
jiff.workspace = true
lightshuttle = { version = "0.4.0", path = "../crates/lightshuttle" }
lightshuttle-manifest = { version = "0.4.0", path = "../crates/lightshuttle-manifest" }
lightshuttle-runtime = { version = "0.4.0", path = "../crates/lightshuttle-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
