[package]
name = "lightshuttle-control"
description = "Local HTTP control plane and dashboard for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "dashboard", "control-plane", "orchestrator", "dev-tools"]
categories = ["development-tools", "web-programming::http-server"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightshuttle-runtime = { version = "0.1.0", path = "../lightshuttle-runtime" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
