[package]
name = "lightshuttle-export"
description = "Manifest to deployment artifact transpilation for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "export", "compose", "kubernetes", "helm"]
categories = ["development-tools", "config"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightshuttle-manifest = { version = "0.2.0", path = "../lightshuttle-manifest" }
lightshuttle-spec = { version = "0.2.0", path = "../lightshuttle-spec" }
indexmap.workspace = true
thiserror.workspace = true
