[package]
name = "lightshuttle-manifest"
description = "Manifest types, parser, and JSON Schema for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["lightshuttle", "manifest", "yaml", "schema"]
categories = ["development-tools", "config", "parser-implementations"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_norway.workspace = true
schemars.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde_json.workspace = true
