[package]
name = "lightshuttle-otel"
description = "OpenTelemetry collector bundling and env injection for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "opentelemetry", "otel", "observability", "telemetry"]
categories = ["development-tools::profiling", "development-tools"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightshuttle-manifest = { version = "0.3.0", path = "../lightshuttle-manifest" }
lightshuttle-runtime = { version = "0.3.0", path = "../lightshuttle-runtime" }
indexmap.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
