[package]
name = "lightshuttle-runtime"
description = "Container runtime backends and lifecycle manager for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "docker", "container", "orchestrator", "lifecycle"]
categories = ["development-tools", "asynchronous"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightshuttle-manifest = { version = "0.2.0", path = "../lightshuttle-manifest" }
bollard.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
tar.workspace = true
ignore.workspace = true
bytes.workspace = true
indexmap.workspace = true
serde.workspace = true
rand.workspace = true
jiff.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
