[package]
name = "lightshuttle-secrets"
description = "Secret sources and .env file loader for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "secrets", "env", "dotenv"]
categories = ["development-tools", "config"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
