[package]
name = "lightshuttle-spec"
description = "Manifest to container specification resolution for LightShuttle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lightshuttle", "container", "spec", "manifest", "orchestrator"]
categories = ["development-tools", "config"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightshuttle-manifest = { version = "0.5.0", path = "../lightshuttle-manifest" }
indexmap.workspace = true
thiserror.workspace = true
rand.workspace = true
