[package]
name = "lightshuttle"
description = "Lightweight developer-time orchestrator for polyglot teams"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "lightshuttle"
path = "src/main.rs"

[dependencies]
lightshuttle-manifest = { version = "0.1.0", path = "../lightshuttle-manifest" }
lightshuttle-runtime = { version = "0.1.0", path = "../lightshuttle-runtime" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
humantime.workspace = true
futures.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
