[package]
name = "lightshuttle"
description = "Lightweight dev orchestrator for polyglot teams: typed docker-compose successor with built-in dashboard, OpenTelemetry and production export."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "lightshuttle"
path = "src/main.rs"

[dependencies]
lightshuttle-control = { version = "0.4.0", path = "../lightshuttle-control" }
lightshuttle-export = { version = "0.4.0", path = "../lightshuttle-export" }
lightshuttle-manifest = { version = "0.4.0", path = "../lightshuttle-manifest" }
lightshuttle-otel = { version = "0.4.0", path = "../lightshuttle-otel" }
lightshuttle-runtime = { version = "0.4.0", path = "../lightshuttle-runtime" }
lightshuttle-secrets = { version = "0.4.0", path = "../lightshuttle-secrets" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
humantime.workspace = true
futures.workspace = true
owo-colors.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
